<resources>
    <string name="app_name"> VR Infinite Videos 360</string>
    <string name="facebook_app_id">179439545871924</string>

    <string name="error_no_yt_link">Not a valid YouTube link!</string>

    <string name="banner_ad_unit_id">ca-app-pub-6750534447542827/7629599597</string>
<string name="about_us">The app is a collection of the very best virtual reality videos from a variety of categories, including Travel, Outdoors, Sports, Lifestyle, Technology, Music, Education, Aerial, Relaxation, Movies, Cars, Fashion, Design, Fitness, Food, Gaming, and many more.
Using both touch panning and the movement of your phone, you can experience 360 video content in the palm of your hand without any VR headset, and even pop in to VR mode at the touch of a button to slide your phone into tray-based headsets like Google Cardboard.
</string>
    <string name="admob_app_id">ca-app-pub-6750534447542827~6152866398</string>
    <string name="app_usage_info">Move your phone to \n experience  360 degree content</string>
    <string name="network_toast">Oops ! No internet Connection .</string>
    <string name="vid_title">Video Title</string>
    <string name="login_sign_container">Login and sign Up  buttons</string>
    <string name="label_google_sign_in">Firebase + Google Sign In</string>
    <string name="desc_google_sign_in">Use a Google Sign In credential to authenticate with Firebase.</string>

    <string name="label_facebook_login">Firebase + Facebook Login</string>
    <string name="desc_facebook_login">Use a Facebook Login credential to authenticate with Firebase.</string>

    <string name="label_twitter_login">Firebase + Twitter Login</string>
    <string name="desc_twitter_login">Use a Twitter Login credential to authenticate with Firebase.</string>

    <string name="label_emailpassword">Email/Password Authentication</string>
    <string name="desc_emailpassword">Use an email and password to authenticate with Firebase.</string>

    <string name="label_anonymous_auth">Anonymous Authentication</string>
    <string name="desc_anonymous_auth">Sign in anonymously and then later upgrade to a full Firebase Auth user.</string>

    <string name="label_custom_auth">Custom Authentication</string>
    <string name="desc_custom_auth">Use a custom token signed by your own server to authenticate with Firebase.</string>

    <string name="label_firebase_ui">FirebaseUI Auth</string>
    <string name="desc_firebase_ui">Use the FirebaseUI-Android library to authenticate with Firebase.</string>

    <string name="hint_user_id">User ID</string>
    <string name="get_custom_token">Get Token</string>
    <string name="sign_in">Sign In</string>
    <string name="create_account">Create Account</string>
    <string name="sign_out">Sign Out</string>
    <string name="disconnect">Disconnect</string>
    <string name="loading">Loading…</string>
    <string name="custom_token">Custom Token</string>
    <string name="signed_out">Signed Out</string>
    <string name="token_null">Token: null</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="desc_firebase_lockup">Firebase logo and name</string>
    <string name="auth_failed">Authentication failed</string>

    <string name="firebase_status_fmt">Firebase User: %s</string>
    <string name="firebase_user_management">Firebase User Management</string>

    <string name="google_status_fmt">Google User: %s</string>
    <string name="google_title_text">Google Sign In</string>

    <string name="facebook_status_fmt">Facebook User: %s</string>
    <string name="facebook_title_text">Facebook Login</string>

    <string name="emailpassword_status_fmt">Email User: %s</string>
    <string name="emailpassword_title_text">Email and Password</string>

    <string name="twitter_status_fmt">Twitter User: %s</string>
    <string name="twitter_title_text">Twitter Login</string>

    <string name="firebaseui_status_fmt">Firebase User: %s</string>
    <string name="firebaseui_title_text">FirebaseUI Auth</string>

    <string name="id_fmt">User ID: %s</string>
    <string name="email_fmt">Email: %s</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="compose">Compose</string>
    <string name="inbox">Inbox</string>
    <string name="sent">Sent</string>
    <string name="drafts">Drafts</string>
    <string name="rate">Rate</string>
    <string name="download">Download</string>
    <string name="others">Others</string>
    <string name="share">Share</string>
    <string name="spam">Spam</string>
    <string name="sent_nfragment">Sent\nFragment</string>
    <string name="feedback_and_help">Feedback and Help</string>
    <string name="about">About Us</string>
    <string name="bin">Bin</string>
    <string name="stock_widget">Stock Widget</string>
    <string name="featured_videos">Featured Videos</string>
    <string name="app_logo">App logo</string>
    <string name="video_title">Video Title</string>
    <string name="background_tint">Background_tint</string>
    <string name="video_thumbnail_image">Video Thumbnail Image</string>
    <string name="settings">Settings</string>
    <string name="help">Help</string>
    <string name="version_1_0">Version 1.0</string>
    <string name="refresh_button">refresh_button</string>
    <string name="video_name">Video Name</string>
    <string name="play_button">Play Button</string>
    <string name="create_an_account">Create an Account</string>
    <string name="my_description">My Description</string>
    <string name="volume_toogle_button">Volume Toogle Button</string>
    <string name="loading_video">Loading Video...</string>
    <string name="don_t_have_an_account">Don\'t have an account ?</string>
    <string name="sign_up">Sign Up</string>
    <string name="already_have_an_account">Already have an account ?</string>
    <string name="login_in">Login In</string>
    <string name="or">Or</string>
    <string name="error_loading_video">"Error loading video: "</string>
</resources>
