<menu xmlns:android="http://schemas.android.com/apk/res/android">

            <item android:title="@string/compose" android:id="@+id/navigation_item_2" android:icon="@drawable/composea" ></item>
            <item android:title="@string/inbox"  android:icon="@drawable/inbox" ></item>
            <item android:title="@string/sent" android:icon="@drawable/senta"></item>
            <item android:title="@string/drafts" android:icon="@drawable/draft"></item>




    <item android:title="@string/others">
        <menu>
            <item
                android:title="@string/spam" android:icon="@drawable/spam"/>
            <item
                android:title="@string/bin" android:icon="@drawable/bin"/>
        </menu>
    </item>

    <group android:id="@+id/shitss">

            <item android:title="@string/settings" android:icon="@drawable/settings"></item>
            <item android:title="@string/help" android:icon="@drawable/help"></item>
    </group>





</menu>