<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/card_view"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:elevation="4dp"
    android:background="@color/cardview_light_background"
    android:layout_margin="8dp">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="4dp"
        android:weightSum="5">

        <ImageView
            android:id="@+id/thumbnail"
            android:layout_width="0dp"
            android:layout_weight="2"
            android:layout_height="100dp"
            android:src="@color/cardview_dark_background"
            android:contentDescription="@string/video_thumbnail_image"
            />

        <TextView
            android:id="@+id/title"
            android:layout_width="0dp"
            android:layout_weight="3"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-light"
            android:maxLines="3"
            android:padding="8dp"
            android:contentDescription="@string/video_name"
            android:text="@string/vid_title"
            android:textColor="#424242"
            android:textStyle="bold"
            android:textSize="12sp" />



    </LinearLayout>
</android.support.v7.widget.CardView>